Fix Issues with Spawning a Local Dev Environment with IDE Integration (#544)
* devops improvements

[dist] merge assembly XML/content into airavata-api
[api-server] remove redundant dbinit schemas
[api-server] move all templates into templates/
[api-server] move all db scripts into database_scripts/
[devcontainer] start creating full dev environ inside .devcontainer

* add missing services, add nginx reverse proxy

* fix dozermapper issues after updating to org.github.dozermapper.core.
cleanup dockerfiles.
add a new service (Restproxy) to replace confluent rest proxy.

* update sdk to 2.1.5, config files, and compose file

* remove unused properties and getters/setters. fix few code warnings

* use java truststore. run keytool to add self-signed *.key files here.
change keystore format to p12.
airavata.p12 must bundle AES key (airavata) and *.crt/pem.
simplify security vars, remove dead props.

* spotless fix